--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body class="mat-typography">
+  <style>
+    * {
+      font-family: 'Montserrat';
+      margin: 0;
+    }
+    body {
+      background-color:#1A1A1A;
+    }
+  </style>
   <app-root></app-root>
 </body>
 </html>
